--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "dialogflow-admin-client-minimalist": {
+    "dialogflow-admin-client": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/dialogflow-admin-client-minimalist",
+            "outputPath": "dist/dialogflow-admin-client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -54,18 +54,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "dialogflow-admin-client-minimalist:build"
+            "browserTarget": "dialogflow-admin-client:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "dialogflow-admin-client-minimalist:build:production"
+              "browserTarget": "dialogflow-admin-client:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "dialogflow-admin-client-minimalist:build"
+            "browserTarget": "dialogflow-admin-client:build"
           }
         },
         "test": {
@@ -99,7 +99,7 @@
         }
       }
     },
-    "dialogflow-admin-client-minimalist-e2e": {
+    "dialogflow-admin-client-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -107,11 +107,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "dialogflow-admin-client-minimalist:serve"
+            "devServerTarget": "dialogflow-admin-client:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "dialogflow-admin-client-minimalist:serve:production"
+              "devServerTarget": "dialogflow-admin-client:serve:production"
             }
           }
         },
@@ -127,5 +127,5 @@
       }
     }
   },
-  "defaultProject": "dialogflow-admin-client-minimalist"
+  "defaultProject": "dialogflow-admin-client"
 }
