--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dialogflow-admin-client",
-  "version": "0.0.0",
+  "name": "actions-on-google-admin-client",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
