--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
     "rxjs": "~6.2.0",
