--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
